--- a/examples/boundaries_flyToBoundary.html
+++ b/examples/boundaries_flyToBoundary.html
@@ -185,7 +185,7 @@
                             lastObject = nextObject;
                         }
                 
-                flyToObject();
+               // flyToObject();
                 
                 setInterval(flyToObject,
                         6000);
