--- a/index.html
+++ b/index.html
@@ -155,10 +155,8 @@
 <!-- ================ -->
 <div id="banner" class="banner">
 
-    <!--<iframe id="demoLink" style="width:100%; height:100%; pointer-events:all;"-->
-            <!--src="../examples/demos_1.html"></iframe>-->
-
-<img id="demoLink" style="width:100%; height:100%" src="assets/images/demo_1.png">
+    <iframe id="demoLink" style="width:100%; height:100%; pointer-events:all;"
+            src="../examples/demos_1.html"></iframe>
 
     <div class="banner-caption">
         <div class="container">
