Added CSG modeling example

--- a/examples/index.html
+++ b/examples/index.html
@@ -306,7 +306,10 @@
             "geometry_TorusGeometry",
 
             "#text",
-            "geometry_VectorTextGeometry"
+            "geometry_VectorTextGeometry",
+
+            "#Constructive Solid Geometry (CSG)",
+            "geometry_csg"
         ],
 
         "Importing": [
