--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ var entity = new XEO.Entity(scene, {
                         <br>
 
                         <div style="text-align:center">
-                            <img src="http://www.gliffy.com/go/publish/image/7304207/L.png">
+                            <img src="assets/images/conceptScene.png">
                         </div>
                         <div class="space"></div>
                         <h4>Defaults</h4>
