Added Codacy badge to website

--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                     <a href="https://twitter.com/share" style="padding-right:20px" class="twitter-share-button" {count}
                        data-via="xeolabs" data-hashtags="webgl,xeoengine">Tweet</a>
 
-                    <br><br><br><br>
+                    <br><br>
+                    <a href="https://www.codacy.com/app/lindsay-kay/xeoengine"><img src="https://api.codacy.com/project/badge/grade/a834272d6bf448f7a77947d7b784f261"/></a>
+                    <br><br>
 
                     <p class="lead"><a href="https://github.com/xeolabs/xeoengine/archive/master.zip"
                                        class="btn btn-default btn-lg">Download xeoEngine</a></p>
