--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <br><br>
 
                     <p class="lead"><a href="https://github.com/xeolabs/xeoengine/archive/master.zip"
-                                       class="btn btn-default btn-lg">Download xeoEngine</a></p>
+                                       class="btn btn-default btn-lg">Download xeoEngine beta</a></p>
 
                     <p class="lead">or <a href="https://github.com/xeolabs/xeoengine">clone the repository</a></p>
                     <br><br><br>
@@ -383,7 +383,7 @@ var scene2 = new XEO.Scene({ json: json });</pre>
                 <div class="col-sm-6">
 
                     <p class="lead"><a href="https://github.com/xeolabs/xeoengine/archive/master.zip"
-                                       class="btn btn-default btn-lg">Download xeoEngine</a></p>
+                                       class="btn btn-default btn-lg">Download xeoEngine beta</a></p>
 
                 </div>
             </div>
