Initial stereo example code

--- a/examples/index.html
+++ b/examples/index.html
@@ -299,6 +299,10 @@
             "demos_2"
         ],
 
+        "Effects": [
+            "effects_stereo"
+        ],
+
         "Entities": [
             "#xeoEngine entities",
             "entities_minimal"
