--- a/examples/interaction_cardboardLookAround.html
+++ b/examples/interaction_cardboardLookAround.html
@@ -23,10 +23,10 @@
 
 <script>
 
-    // Load glTF model
+       // Load glTF model
     var gearbox = new XEO.Model({
 //        src: "models/gltf/gearbox/gearbox_assy.gltf"
-        src: "models/gltf/buggy/buggy.gltf"
+        src: "models/gltf/duck/duck.gltf"
     });
 
     // Set initial camera position
