Changed references to 'xeolabs' to 'xeographics'

--- a/website/index.html
+++ b/website/index.html
@@ -6,8 +6,8 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>xeoEngine - A WebGL-based 3D engine from @xeoLabs</title>
-    <meta name="author" content="xeolabs.com">
+    <title>xeoEngine - A WebGL-based 3D engine from xeographics</title>
+    <meta name="author" content="xeographics.com">
     <meta property="og:url" content="http://www.xeoengine.org"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="xeoEngine - WebGL-based 3D visualization engine"/>
@@ -85,8 +85,8 @@
                     <!-- name-and-slogan -->
                     <div class="site-name-and-slogan smooth-scroll">
                         <div class="site-name"><a href="#banner">xeoEngine</a></div>
-                        <div class="site-slogan">A WebGL-based 3D engine by <a target="_blank"
-                                                                               href="http://xeolabs.com">xeoLabs</a>
+                        <div class="site-slogan">A WebGL-based 3D engine from <a target="_blank"
+                                                                                 href="http://xeographics.com">xeographics</a>
                         </div>
                     </div>
 
@@ -128,9 +128,9 @@
                                         <li><a href="#features">Features</a></li>
                                         <li><a href="../examples" target="_examples">Examples</a></li>
                                         <li><a href="../docs"  target="_docs">Docs</a></li>
-                                        <li><a href="https://github.com/xeolabs/xeoengine"  target="_github">GitHub</a></li>
+                                        <li><a href="https://github.com/xeographics/xeoengine"  target="_github">GitHub</a></li>
                                         <li>
-                                            <a href="https://github.com/xeolabs/xeoengine/archive/master.zip">Download</a>
+                                            <a href="https://github.com/xeographics/xeoengine/archive/master.zip">Download</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -162,10 +162,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 object-non-visible" data-animation-effect="fadeIn">
-                    <h1>An open source engine for Web-based 3D visualization</h1>
+                    <h1>an open source engine for Web-based 3D visualization</h1>
 
-                    <p class="lead">Created by <a target="_blank"
-                                                  href="http://twitter.com/xeolabs">@xeoLabs</a></p>
+                    <p class="lead">from <a target="_blank" href="http://xeographics.com">xeographics</a></p>
 
                     <script>!function (d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
@@ -181,10 +180,10 @@
                     <br><br>
                     <br><br>
 
-                    <p class="lead"><a href="https://github.com/xeolabs/xeoengine/archive/master.zip"
+                    <p class="lead"><a href="https://github.com/xeographics/xeoengine/archive/master.zip"
                                        class="btn btn-default btn-lg">Download xeoEngine beta</a></p>
 
-                    <p class="lead">or <a href="https://github.com/xeolabs/xeoengine">clone the repository</a></p>
+                    <p class="lead">or <a href="https://github.com/xeographics/xeoengine">clone the repository</a></p>
                     <br><br><br>
 
                 </div>
@@ -227,11 +226,11 @@
                         <h4>Creating the 3D Scene</h4>
 
                         <p>First, include <a
-                                href="https://cdn.rawgit.com/xeolabs/xeoengine/master/build/xeoengine.min.js">xeoengine.min.js</a>
+                                href="https://cdn.rawgit.com/xeographics/xeoengine/master/build/xeoengine.min.js">xeoengine.min.js</a>
                             in your
                             HTML
                             page:</p>
-                        <pre>&lt;script src="https://cdn.rawgit.com/xeolabs/xeoengine/master/build/xeoengine.min.js"&gt;&lt;/script&gt;</pre>
+                        <pre>&lt;script src="https://cdn.rawgit.com/xeographics/xeoengine/master/build/xeoengine.min.js"&gt;&lt;/script&gt;</pre>
 
                         <br>
 
@@ -340,7 +339,7 @@ var scene2 = new XEO.Scene({ json: json });</pre>
                             <li><a
                                     href="http://xeoengine.org/docs" target="_docs">API reference</a></li>
                             <li><a
-                                    href="https://github.com/xeolabs/xeoengine/wiki" target="_wiki">Wiki</a></li>
+                                    href="https://github.com/xeographics/xeoengine/wiki" target="_wiki">Wiki</a></li>
                             <li><a
                                     href="http://xeoengine.org/examples/#materials_fresnel_specular" target="_examples">Examples</a>
                             </li>
@@ -382,7 +381,7 @@ var scene2 = new XEO.Scene({ json: json });</pre>
             <div class="row">
                 <div class="col-sm-6">
 
-                    <p class="lead"><a href="https://github.com/xeolabs/xeoengine/archive/master.zip"
+                    <p class="lead"><a href="https://github.com/xeographics/xeoengine/archive/master.zip"
                                        class="btn btn-default btn-lg">Download xeoEngine beta</a></p>
 
                 </div>
@@ -397,7 +396,7 @@ var scene2 = new XEO.Scene({ json: json });</pre>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p class="text-center">Copyright © 2015 xeoEngine by <a target="_blank" href="http://xeolabs.com">xeoLabs</a>.
+                    <p class="text-center">Copyright © 2015 xeoEngine by <a target="_blank" href="http://xeographics.com">xeographics</a>.
                     </p>
                 </div>
             </div>
