--- a/examples/geometry_VectorTextGeometry.html
+++ b/examples/geometry_VectorTextGeometry.html
@@ -21,7 +21,7 @@
 <script id="source">
 
     // VectorTextGeometry Demo
-    // @xeolabs
+    // @xeographics
 
     var geometry = new XEO.VectorTextGeometry({
         text: document.getElementById("source").innerText,
