--- a/examples/materials_texture_rtt.html
+++ b/examples/materials_texture_rtt.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-    <script src="../build/xeoengine.min.js"></script>
+    <script src="../build/xeoengine.js"></script>
     <link href="css/styles.css" rel="stylesheet"/>
 
 <body>
@@ -19,8 +19,9 @@
 
 <script>
 
+    // Renders a 3D scene to a color target
 
-    var object1 = new XEO.Entity({
+    var entity1 = new XEO.Entity({
 
         stage: new XEO.Stage({
             priority: 0
@@ -40,21 +41,25 @@
         })
     });
 
+    // Renders an object that's textured
+    // with the color target
 
-    var object2 = new XEO.Entity({
+    var entity2 = new XEO.Entity({
 
         stage: new XEO.Stage({
             priority: 1
         }),
 
-        geometry: new XEO.PlaneGeometry({
-            xSize: 10,
-            zSize: 10
+        geometry: new XEO.BoxGeometry({
+            xSize: 2,
+            ySize: 2,
+            zSize: 2
         }),
 
         material: new XEO.PhongMaterial({
             diffuseMap: new XEO.Texture({
-                target: object1.colorTarget
+                target: entity1.colorTarget
+             //   src: "textures/diffuse/UVCheckerMap08-1024.png"
             })
         }),
 
@@ -64,11 +69,11 @@
     });
 
 
-    object1.scene.on("tick",
+    entity1.scene.on("tick",
             function () {
 
-                object1.camera.view.rotateEyeY(0.4);
-                object1.camera.view.rotateEyeX(0.6);
+                entity1.camera.view.rotateEyeY(0.4);
+                entity1.camera.view.rotateEyeX(0.6);
             });
 </script>
 </body>
