Link to zSpace support in features index

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <h1>An open source engine for Web-based 3D visualization</h1>
 
                     <p class="lead">Created by <a target="_blank"
-                                                  href="http://twitter.com/xeographics">@xeoLabs</a></p>
+                                                  href="http://twitter.com/xeolabs">@xeoLabs</a></p>
 
                     <script>!function (d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
