--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>xeogl - A WebGL-based 3D engine from @xeoLabs</title>
+    <title>xeogl - WebGL-based 3D visualization engine</title>
     <meta name="author" content="xeolabs.com">
     <meta property="og:url" content="http://www.xeogl.org"/>
     <meta property="og:type" content="website"/>
@@ -85,9 +85,7 @@
                     <!-- name-and-slogan -->
                     <div class="site-name-and-slogan smooth-scroll">
                         <div class="site-name"><a href="#banner">xeogl</a></div>
-                        <div class="site-slogan">A WebGL-based 3D engine by <a target="_blank"
-                                                                               href="http://xeolabs.com">xeoLabs</a>
-                        </div>
+                        <div class="site-slogan">data-driven 3D graphics engine for the web</div>
                     </div>
 
                 </div>
