--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <!-- name-and-slogan -->
                     <div class="site-name-and-slogan smooth-scroll">
                         <div class="site-name"><a href="#banner">xeogl</a></div>
-                        <div class="site-slogan">data-driven 3D graphics engine for the web</div>
+                        <div class="site-slogan">A data-driven 3D visualization engine for the web</div>
                     </div>
 
                 </div>
@@ -163,7 +163,7 @@
                     <h1>An open source engine for Web-based 3D visualization</h1>
 
                     <p class="lead">Created by <a target="_blank"
-                                                  href="http://twitter.com/xeolabs">@xeoLabs</a></p>
+                                                  href="http://twitter.com/xeographics">@xeographics</a></p>
 
                     <script>!function (d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
