--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                         <h4>Creating the 3D Scene</h4>
 
                         <p>First, include <a
-                                href="https://cdn.rawgit.com/xeolabs/xeogl/master/build/xeogl.min.js">xeogl.min.js</a>
+                                href="https://github.com/xeolabs/xeogl/tree/master/build/">xeogl.min.js</a>
                             in your
                             HTML
                             page:</p>
-                        <pre>&lt;script src="https://cdn.rawgit.com/xeolabs/xeogl/master/build/xeogl.min.js"&gt;&lt;/script&gt;</pre>
+                        <pre>&lt;script src="xeogl.min.js"&gt;&lt;/script&gt;</pre>
 
                         <br>
 
